--- a/index.html
+++ b/index.html
@@ -1,94 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css" />
+    <title>Оформление заказа</title>
+  </head>
 
-	<link rel="stylesheet" href="main.css">
-	<title>Оформление заказа</title>
-</head>
+  <body>
+    <header></header>
 
-<body>
+    <main class="main">
+      <h1>Оформление заказа</h1>
 
-	<header></header>
+      <!-- первый блок -->
+      <div class="block">
+        <div class="block-item">
+          <div class="wrapper-line">
+            <div class="icon"></div>
+            <h2>Товары в корзине</h2>
+          </div>
+          <div class="wrapper-line">
+            <span class="text-extra">Товар</span>
+            <span class="text-extra">Кол-во</span>
+            <span class="text-extra">Вес</span>
+            <span class="text-extra">Сумма</span>
+          </div>
+        </div>
 
-	<main class="main">
-		<div class="grid">
-			<div class="path">
-				<a href="#">Главная > </a>
-				<a href="#">Корзина > </a>
-				<span>Оформление заказа</span>
-			</div>
+        <div class="block-item block-line">
+          <div class="block-column">
+            <span class="text">
+              Сканер мобильный Brother DS-720D, A4, 7,5 стр/мин, 600 dpi,
+              двухстороннее сканирование, USB
+            </span>
+            <span class="text-extra">
+              Арт.: 9540B078
+            </span>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">2 шт</div>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">0.21 кг</div>
+          </div>
+          <div class="block-column">
+            <span class="text text-bold">92 127,86₽</span>
+            <span class="text-extra">(668.10$)</span>
+          </div>
+        </div>
 
-			<h1 class="title title_h1">Оформление заказа</h1>
+        <div class="block-item block-line">
+          <div class="block-column">
+            <span class="text">
+              Сканер мобильный Brother DS-720D, A4, 7,5 стр/мин, 600 dpi,
+              двухстороннее сканирование, USB
+            </span>
+            <span class="text-extra">
+              Арт.: 9540B078
+            </span>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">2 шт</div>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">0.21 кг</div>
+          </div>
+          <div class="block-column">
+            <span class="text text-bold">92 127,86₽</span>
+            <span class="text-extra">(668.10$)</span>
+          </div>
+        </div>
 
-			<div class="main__wrapper">
-				<div class="main__block main__block_l">
-					<div class="main__block-item">
+        <div class="block-item block-line">
+          <div class="block-column">
+            <span class="text">
+              Сканер мобильный Brother DS-720D, A4, 7,5 стр/мин, 600 dpi,
+              двухстороннее сканирование, USB
+            </span>
+            <span class="text-extra">
+              Арт.: 9540B078
+            </span>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">2 шт</div>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">0.21 кг</div>
+          </div>
+          <div class="block-column">
+            <span class="text text-bold">92 127,86₽</span>
+            <span class="text-extra">(668.10$)</span>
+          </div>
+        </div>
 
-					</div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-				</div>
-			</div>
-			<div class="main__wrapper">
-				<div class="main__block main__block_l">
-					<div class="main__block-item">
+        <div class="block-item block-line">
+          <div class="block-column">
+            <span class="text">
+              Сканер мобильный Brother DS-720D, A4, 7,5 стр/мин, 600 dpi,
+              двухстороннее сканирование, USB
+            </span>
+            <span class="text-extra">
+              Арт.: 9540B078
+            </span>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">2 шт</div>
+          </div>
+          <div class="block-column">
+            <div class="text-extra">0.21 кг</div>
+          </div>
+          <div class="block-column">
+            <span class="text text-bold">92 127,86₽</span>
+            <span class="text-extra">(668.10$)</span>
+          </div>
+        </div>
 
-					</div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-				</div>
-			</div>
-			<div class="main__wrapper">
-				<div class="main__block main__block_l">
-					<div class="main__block-item">
+        <div class="block-item block-item-space">
+          <a href="#" class="btn-empty">
+            Вернуться к корзине
+          </a>
+          <a href="#" class="btn">
+            Продолжить
+          </a>
+        </div>
+      </div>
 
-					</div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-				</div>
-			</div>
+      <!-- второй блок -->
+      <div class="block block-2">
+        <div class="block-item">
+          <div class="wrapper-line">
+            <div class="icon"></div>
+            <h2>Информация о покупателе</h2>
+          </div>
 
-			<div class="main__wrapper">
-				<div class="main__block main__block_l">
-					<div class="main__block-item">
+          <div class="wrapper-line">
+            <div class="radio-wrapper">
+              <input type="radio" name="1" />
+              <div class="radio"></div>
+              <label class="radio-label">Юридическое лицо</label>
+            </div>
 
-					</div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-				</div>
+            <div class="radio-wrapper">
+              <input type="radio" name="1" />
+              <div class="radio"></div>
+              <label class="radio-label">Индивидуальный предприниматель</label>
+            </div>
+          </div>
 
-				<div class="main__block main__block_s">
-					<div class="main__block-item">
+          <div class="wrapper-line wrapper-line-start">
+            <div class="wrapper-column">
+              <div class="input-wrapper">
+                <label for="1" class="input-label">Контактное лицо *</label>
+                <input type="text" class="input" id="1" />
+              </div>
+              <div class="input-wrapper">
+                <label for="2" class="input-label">Телефон *</label>
+                <input type="text" class="input" id="2" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">E-mail *</label>
+                <input type="text" class="input" id="3" />
+              </div>
+            </div>
 
-					</div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-					<div class="main__block-item"></div>
-				</div>
-			</div>
-		</div>
-	</main>
+            <div class="wrapper-column">
+              <div class="input-wrapper">
+                <label for="area" class="input-label"
+                  >Комментарии к заказу</label
+                >
+                <textarea class="area" id="area"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper-column">
+            <div class="checkbox-wrapper">
+              <input type="checkbox" id="check" class="checkbox" />
+              <label class="checkbox" for="check"></label>
+              <label for="check" class="checkbox-label">
+                Я даю согласие на обработку персональных данных и соглашаюсь c
+                <a href="#">политикой конфиденциальности</a>
+              </label>
+            </div>
+          </div>
+          <div class="block-item-space">
+            <a href="#" class="btn-empty">
+              Назад
+            </a>
+            <a href="#" class="btn">
+              Продолжить
+            </a>
+          </div>
+        </div>
+      </div>
 
-	<footer></footer>
+      <!-- третий блок -->
+      <div class="block block-2">
+        <div class="block-item">
+          <div class="wrapper-line">
+            <div class="icon"></div>
+            <h2>Платёжная информация</h2>
+          </div>
 
-</body>
+          <div class="wrapper-line wrapper-line-start">
+            <div class="wrapper-column">
+              <div class="input-wrapper">
+                <label for="1" class="input-label">Организация</label>
+                <input type="text" class="input" id="1" />
+              </div>
+              <div class="input-wrapper">
+                <label for="2" class="input-label"
+                  >Название организации *</label
+                >
+                <input type="text" class="input" id="2" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">ИНН *</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">КПП</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">ОГРН</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">ОКПО</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Номер договора</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Сайт</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="radio-wrapper">
+                <input type="radio" name="1" />
+                <div class="radio"></div>
+                <label class="radio-label">Оплата по счету</label>
+              </div>
+            </div>
 
+            <div class="wrapper-column">
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Номер счета</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">БИК</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Банк</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Корр.счет</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Местонахождение банка</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Адрес *</label>
+                <input type="text" class="input" id="3" />
+              </div>
+              <div class="input-wrapper">
+                <label for="3" class="input-label">Почтовый адрес</label>
+                <div class="checkbox-wrapper">
+                  <input type="checkbox" id="check" class="checkbox" />
+                  <label class="checkbox" for="check"></label>
+                  <label for="check" class="checkbox-label">
+                    Совпадает с юридическим
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <span class="text-extra" style="margin-left: 26px;"
+            >Счет будет выслан на почту после подтверждения менеджера.</span
+          >
+          <div class="block-item-space">
+            <a href="#" class="btn-empty">
+              Назад
+            </a>
+            <a href="#" class="btn">
+              Продолжить
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
