--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Оформление заказа</h1>
 
 		<!-- первый блок -->
-		<div class="block">
+		<div class="block block-l">
 			<div class="block-item">
 				<div class="wrapper-line">
 					<i class="fal fa-shopping-cart"></i>
@@ -130,7 +130,7 @@
 		</div>
 
 		<!-- второй блок -->
-		<div class="block block-2">
+		<div class="block block-l block-2">
 			<div class="block-item">
 				<div class="wrapper-line">
 					<div class="icon"></div>
@@ -196,7 +196,7 @@
 		</div>
 
 		<!-- третий блок -->
-		<div class="block block-2">
+		<div class="block block-l block-2">
 			<div class="block-item">
 				<div class="wrapper-line">
 					<div class="icon"></div>
@@ -297,68 +297,112 @@
 		</div>
 
 		<!-- четвертый блок -->
-		<div class="block block-2">
-			<div class="block-item">
-				<div class="wrapper-line">
-					<div class="icon"></div>
-					<h2>Служба доставки</h2>
-				</div>
-
-				<div class="column">
-					<div class="wrapper-column">
-						<div class="wrapper-column-item">
-							<div class="radio-wrapper">
-								<input type="radio" name="1" id="4" />
-								<label class="radio" for="4"></label>
-								<label class="radio-label" for="4">Самовывоз</label>
-							</div>
-							<div class="container">
-								<span>Стоимость:</span>
-								<span>бесплатно</span>
-							</div>
-							<span class="text">Вы можете <b>самостоятельно</b> забрать заказ из
-								нашего магазина</span>
-						</div>
-
-						<div class="wrapper-column-item">
-							<div class="radio-wrapper">
-								<input type="radio" name="2" id="5" />
-								<label class="radio" for="5"></label>
-								<label class="radio-label" for="5">Доставка до терминала
-									транспортной компании в Москве</label>
-							</div>
-							<div class="container">
-								<span>Стоимость:</span>
-								<span>484₽ (7.50$)</span>
-							</div>
-							<span class="text">Для заказов на сумму менее 500у.е. Доставка
-								осуществляется <b>в течение 3-х дней</b></span>
-						</div>
+		<div class="block-wrapper">
+			<div class="block block-l block-2">
+				<div class="block-item">
+					<div class="wrapper-line">
+						<div class="icon"></div>
+						<h2>Служба доставки</h2>
 					</div>
 
-					<div class="wrapper-column">
-						<div class="wrapper-column-item">
-							<div class="radio-wrapper">
-								<input type="radio" name="2" id="6" />
-								<label class="radio" for="6"></label>
-								<label class="radio-label" for="6">Доставка курьером по Москве</label>
+					<div class="column">
+						<div class="wrapper-column">
+							<div class="wrapper-column-item">
+								<div class="radio-wrapper">
+									<input type="radio" name="1" id="4" />
+									<label class="radio" for="4"></label>
+									<label class="radio-label" for="4">Самовывоз</label>
+								</div>
+								<div class="container">
+									<span>Стоимость:</span>
+									<span>бесплатно</span>
+								</div>
+								<span class="text">Вы можете <b>самостоятельно</b> забрать заказ из
+									нашего магазина</span>
 							</div>
-							<div class="container">
-								<span>Стоимость:</span>
-								<span>484₽ (7.50$)</span>
+
+							<div class="wrapper-column-item">
+								<div class="radio-wrapper">
+									<input type="radio" name="2" id="5" />
+									<label class="radio" for="5"></label>
+									<label class="radio-label" for="5">Доставка до терминала
+										транспортной компании в Москве</label>
+								</div>
+								<div class="container">
+									<span>Стоимость:</span>
+									<span>484₽ (7.50$)</span>
+								</div>
+								<span class="text">Для заказов на сумму менее 500у.е. Доставка
+									осуществляется <b>в течение 3-х дней</b></span>
 							</div>
-							<span class="text">Доставка осуществляется </b>в течение
-								следующего дня<b></span>
 						</div>
 
-						<div class="wrapper-column-item">
-							<div class="radio-wrapper">
-								<input type="radio" name="2" id="7" />
-								<label class="radio" for="7"></label>
-								<label class="radio-label" for="7">Доставка до терминалов ПЭК/
-									Деловые линии в Москве</label>
+						<div class="wrapper-column">
+							<div class="wrapper-column-item">
+								<div class="radio-wrapper">
+									<input type="radio" name="2" id="6" />
+									<label class="radio" for="6"></label>
+									<label class="radio-label" for="6">Доставка курьером по Москве</label>
+								</div>
+								<div class="container">
+									<span>Стоимость:</span>
+									<span>484₽ (7.50$)</span>
+								</div>
+								<span class="text">Доставка осуществляется </b>в течение
+									следующего дня</b></span>
+							</div>
+
+							<div class="wrapper-column-item">
+								<div class="radio-wrapper">
+									<input type="radio" name="2" id="7" />
+									<label class="radio" for="7"></label>
+									<label class="radio-label" for="7">Доставка до терминалов ПЭК/
+										Деловые линии в Москве</label>
+								</div>
 							</div>
 						</div>
+
+					</div>
+
+					<div class="column">
+						<a href="#" class="btn">Назад</a>
+					</div>
+				</div>
+
+			</div>
+			<div class="block block-s">
+				<div class="block-item">
+					<div class="wrapper-line wrapper-line-space">
+						<h2>Ваш заказ</h2>
+						<a href="#" class="link">Изменить</a>
+					</div>
+				</div>
+
+				<div class="block-item">
+					<div class="wrapper-line wrapper-line-space">
+						<span class="text-extra">Товаров на:</span>
+						<span class="text-extra">536258.28&nbsp;₽<br>(995.05$)</span>
+					</div>
+
+					<div class="wrapper-line wrapper-line-space">
+						<span class="text-extra">в т.ч. НДС:</span>
+						<span class="text-extra">14689.19&nbsp;₽<br>(200.93$)</span>
+					</div>
+
+					<div class="wrapper-line wrapper-line-space">
+						<span class="text-extra">Доставка:</span>
+						<span class="text-extra">484&nbsp;₽<br>(7.50$)</span>
+					</div>
+
+					<div class="line"></div>
+
+					<div class="wrapper-line wrapper-line-space">
+						<b>Итого:</b>
+						<b>536258.28&nbsp;₽<br>(995.05$)</b>
+					</div>
+
+					<div class="wrapper-line">
+						<a href="#" class="btn" style="margin-top: 30px; width: 100%;">Оформить заказ</a>
 					</div>
 				</div>
 			</div>
